# nuscenes-gs-lab

./: .gitignore  README.md  pyproject.toml
data/derived/scene-0061_front/: transforms.json
data/derived/scene-0553_front/: transforms.json
data/derived/scene-0757_front/: transforms.json
data/derived/scene-0757_front_bbox_masked/: transforms.json
data/derived/scene-1077_front/: transforms.json
doc/: plan_front_cam_baseline.md  repository.md
experiments/: roadmap.md
experiments/01_scene_analysis/: notes.md  plan.md  run.sh
experiments/02_lidarseg_visualization/: notes.md  plan.md
experiments/03_lidarseg_masking/: notes.md  plan.md  run.sh
experiments/04_bbox_masking/: notes.md  plan.md  run.sh
experiments/05_depth_supervision/: notes.md  plan.md  run.sh
experiments/06_multicam_front3/: plan.md
experiments/a_prime/: run.sh
experiments/front_cam_baseline/: notes.md  plan.md  run.sh
scripts/: analyze_scene_speed.py  export_front_only.py  export_front_with_bbox_masks.py  export_front_with_depth.py  export_front_with_lidar_masks.py  lidarseg_viewer.py  pose_viewer.py  visualize_poses.py
src/nuscenes_gs/: depth.py  masks.py  nerfstudio_export.py  poses.py
