[project]
name = "nuscenes-gs-lab"
version = "0.1.0"
description = "nuScenes x 3D Gaussian Splatting experiment framework"
requires-python = ">=3.10,<3.11"
dependencies = [
    "nuscenes-devkit",
    "numpy",
    "scipy",
    "pyquaternion",
    "nerfstudio>=1.1.5",
    "streamlit>=1.54.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "gsplat==1.4.0",
    "packaging>=24.1",
    "setuptools==69.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "gsplat-whl"
url = "https://docs.gsplat.studio/whl/pt21cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
gsplat = { index = "gsplat-whl" }

[tool.uv]
override-dependencies = [
    "shapely>=2.0",
    "matplotlib>=3.8",
    "numpy<2",
]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
